--- a/SiteDeEventos/evento2.html
+++ b/SiteDeEventos/evento2.html
@@ -35,25 +35,24 @@
         <div class="container">
             <div class="card-sl">
                 <!-- header do evento -->
-                <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                <div class="imagem" style="background: url(img/Evento02.webp) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">PROFISSIONAL 5.0
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
                                     <div class="col-lg-4">
-                                        <p><strong>Data: </strong> 16 de Junho de 2023</p>
+                                        <p><strong>Data: </strong> 30 de Agosto de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> Limeira,SP</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>18:30</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +70,25 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>Você já pensou se está preparado para a nova geração de profissionais? O
+                                            mercado de trabalho está passando por uma transformação, impulsionada pelas
+                                            novas tecnologias, e requer habilidades mais avançadas para enfrentar esses
+                                            desafios. Surge, então, a figura do profissional 5.0, que se destaca por sua
+                                            capacidade de lidar com problemas atuais de forma flexível e perspicaz.
+
+                                        </p>
+                                        <p>O profissional 5.0 é um agente de transformação, capaz de inovar, empreender
+                                            e gerar valor tanto para a empresa quanto para a sociedade como um todo. É
+                                            essencial que as empresas e as instituições de ensino invistam no
+                                            desenvolvimento dessas habilidades nos jovens estudantes, preparando-os para
+                                            as demandas do mercado de trabalho e os desafios da sociedade contemporânea.
+                                        </p>
+                                        <p>Pensando nisso, criamos o evento "PROFISSIONAL 5.0", com o objetivo de
+                                            compartilhar conhecimentos com jovens estudantes que desejam se destacar no
+                                            cenário profissional. O evento abordará temas como liderança, oratória,
+                                            tecnologia, inovação e trajetórias profissionais, visando a excelência
+                                            dessas habilidades no futuro profissional 5.0. Junte-se a nós nessa jornada
+                                            de desenvolvimento e preparação para o sucesso profissional.</p>
                                     </div>
                                 </div>
                             </div>
