--- a/SiteDeEventos/evento4.html
+++ b/SiteDeEventos/evento4.html
@@ -35,14 +35,13 @@
         <div class="container">
             <div class="card-sl">
                 <!-- header do evento -->
-                <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                <div class="imagem" style="background: url(https://images.even3.com.br/KMklIale0m_79uk98LjHLuJ_0AQ=/1100x440/smart/even3.blob.core.windows.net/banner/IMG_0243.79cc11dc216040cc8a0f.PNG) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">INFOGIRL
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
@@ -50,10 +49,10 @@
                                         <p><strong>Data: </strong> 16 de Junho de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> Quixadá,CE</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>15:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +70,16 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>O Infogirl é um evento realizado anualmente pelo Programa de Educação
+                                            Tutorial/Conexão de Saberes (PET TI), que busca incentivar a inclusão de
+                                            meninas do ensino médio e a permanência de mulheres da graduação na área de
+                                            Tecnologia da Informação, apresentando um ambiente amigável e descontraído,
+                                            mostrando como é ser uma profissional de Tecnologia da Informação. Com o
+                                            objetivo de promover o evento que acontecerá no próximo semestre e buscando
+                                            criar mais um momento de interação entre as graduandas do campus, o momento
+                                            contará com a participação de egressas do campus de Quixadá, que
+                                            compartilharão sua trajetória na área de TI.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
