--- a/SiteDeEventos/evento5.html
+++ b/SiteDeEventos/evento5.html
@@ -36,24 +36,24 @@
             <div class="card-sl">
                 <!-- header do evento -->
                 <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                    style="background: url(https://images.even3.com.br/pMqP0inbF2aPKt8AoFXjW8KT5ps=/1100x440/smart/even3.blob.core.windows.net/banner/OeventomaisinterdisciplinardaRuralinda.8be4b2410eff4c319e71.png) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">Evento de Integração e Inovação
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
                                     <div class="col-lg-4">
-                                        <p><strong>Data: </strong> 16 de Junho de 2023</p>
+                                        <p><strong>Data: </strong> 28 e 29 de Junho de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> Recife,PE</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>16:00</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +71,27 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>O Evento de Integração e Inovação (EII) é um movimento realizado por
+                                            estudantes e que busca trazer, para o ambiente universitário, temáticas
+                                            interdisciplinares ligadas à inovação.</p>
+
+
+                                            <p>
+                                            O principal objetivo do evento é fomentar a produção de projetos inovadoras
+                                            em todas as áreas do conhecimento, além de divulgar iniciativas realizadas
+                                            na universidade com essas temáticas, a fim de demonstrar que as Ciências
+                                            Humanas, Ciências Exatas, Ciências Sociais Aplicadas e Ciências Agrícolas
+                                            podem ser pensadas para além do âmbito acadêmico e do magistério. Assim, o
+                                            evento conta com diversos profissionais que estarão dispostos a
+                                            compartilharem suas trajetórias, inspirando outros estudantes em suas
+                                            carreiras.
+                                        </p>
+
+                                        <p>
+                                            Em síntese, buscamos responder a pergunta: “quais são as possibilidades de
+                                            trabalho dos graduandos em licenciatura e bacharelado para além da academia
+                                            e magistério?”
+                                        </p>
                                     </div>
                                 </div>
                             </div>
