--- a/SiteDeEventos/eventos.html
+++ b/SiteDeEventos/eventos.html
@@ -47,7 +47,7 @@
                 <p href="" class="card-text"><strong>Local:</strong> Quixadá,CE</p>
                 <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento4.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -61,11 +61,13 @@
                 <h5 class="card-title">Evento de Integração e Inovação</h5>
               </div>
               <hr class="featurette-divider">
-              <div class="dataLocal">
-                <p href="" class="card-text"><strong>Local:</strong> Recife,PE</p>
-                <p href="" class="card-text"><strong>Data:</strong> 28/06/2023 – 29/06/2023</p>
+              <div class="card-text">
+                <div class="dataLocal">
+                  <p href="" class="card-text"><strong>Local:</strong> Recife,PE</p>
+                  <p href="" class="card-text"><strong>Data:</strong> 28/06/2023 – 29/06/2023</p>
+                </div>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento5.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -83,7 +85,7 @@
                 <p href="" class="card-text"><strong>Local:</strong> João Pessoa,PB</p>
                 <p href="" class="card-text"><strong>Data:</strong> 19/08/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento1.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -104,7 +106,7 @@
                 <p href="" class="card-text"><strong>Local:</strong> Itupeva,SP</p>
                 <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento6.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -122,7 +124,7 @@
                 <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
                 <p href="" class="card-text"><strong>Data:</strong> 08/07/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento7.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -140,7 +142,7 @@
                 <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
                 <p href="" class="card-text"><strong>Data:</strong> 18/06/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento8.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
@@ -150,59 +152,68 @@
         <div class="col-lg-4 mb-4">
           <div class="card">
             <div class="card-img-top"
-              style=" background: url(https://images.even3.com.br/H_e3RUvYXvCWCLFFU4tHXLBJFjQ=/1100x440/smart/even3.blob.core.windows.net/banner/LOGOHAPPYHOUR.e6568803dde743c4a7d7.png) center/cover;">
+              style=" background: url(img/evento03.webp) center/cover;">
             </div>
             <div class="card-body">
               <div class="title">
-                <h5 class="card-title">Happy Hour Empresarial</h5>
+                <h5 class="card-title">EXPO EMPREENDEDOR</h5>
               </div>
               <hr class="featurette-divider">
               <div class="dataLocal">
-                <p href="" class="card-text"><strong>Local:</strong> Itupeva,SP</p>
-                <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
+                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 11/08/2023 e 12/08/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento3.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card">
             <div class="card-img-top"
-              style=" background: url(https://images.even3.com.br/XgdXdwIc2bdb8fNp9Polxsi6dq4=/1100x440/smart/even3.blob.core.windows.net/banner/Artboard2.c3937296abc04a2f9363.jpg) center/cover;">
+              style=" background: url(img/Evento02.webp) center/cover;">
             </div>
             <div class="card-body">
               <div class="title">
-                <h5 class="card-title">Masterclass de Recursos Humanos</h5>
+                <h5 class="card-title">PROFISSIONAL 5.0</h5>
               </div>
               <hr class="featurette-divider">
               <div class="dataLocal">
-                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
-                <p href="" class="card-text"><strong>Data:</strong> 08/07/2023</p>
+                <p href="" class="card-text"><strong>Local:</strong> Limeira,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 30/08/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento2.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card">
             <div class="card-img-top"
-              style=" background: url(https://images.even3.com.br/NbFJqTF1qokbc4nb_pdcNaWpAT8=/1100x440/smart/even3.blob.core.windows.net/banner/A2B4DAF2-C886-4C9B-A6A5-AC3A100440BA.b8a566853c6e49a3ab5b.png) center/cover;">
+              style=" background: url(https://images.even3.com.br/dAqiHcLLKfSb3d0wC2qdOgIFVC0=/1100x440/smart/even3.blob.core.windows.net/banner/CapturadeTela2023-06-06as18.44.53.915f1e34141d446d9c66.png) center/cover;">
             </div>
             <div class="card-body">
               <div class="title">
-                <h5 class="card-title">Gemini Aliens</h5>
+                <h5 class="card-title">Labgoal Flutter para Iniciantes</h5>
               </div>
               <hr class="featurette-divider">
               <div class="dataLocal">
-                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
-                <p href="" class="card-text"><strong>Data:</strong> 18/06/2023</p>
+                <p href="" class="card-text"><strong>Local:</strong> Poços de Caldas,MG</p>
+                <p href="" class="card-text"><strong>Data:</strong> 17/06/2023</p>
               </div>
-              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+              <a href="evento9.html" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </section>
+
+  <section>
+    <footer class="text-center text-white" style="background-color: #212529;">
+      <div class="container p-4"></div>
+      <div class="text-center p-3" style="background-color: #212529;">
+        © 2023 Ryan Gabriel | GR Eventos
+      </div>
+    </footer>
   </section>
 </body>
 
