--- a/SiteDeEventos/cadastroe.html
+++ b/SiteDeEventos/cadastroe.html
@@ -17,7 +17,7 @@
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <div class="logo" style="height: 70px;background: url(img/aiaiai.png) center/cover;width: 200px;">
         </div>
-        
+
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
@@ -31,6 +31,7 @@
       </div>
     </div>
   </header>
+
   <br>
 
   <section class="text-center">
@@ -70,23 +71,21 @@
         </div>
       </div>
     </div>
+    <div class="eventoCadastrado">
+
+    </div>
   </section>
-
-  <div class="eventoCadastrado">
-    
-  </div>
-
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-    </ul>
-    <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
-  </footer>
-
+  <br>
+  <br>
+  <br>
+  <section>
+    <footer class="text-center text-white" style="background-color: #212529;">
+      <div class="container p-4"></div>
+      <div class="text-center p-3" style="background-color: #212529;">
+        © 2023 Ryan Gabriel | GR Eventos
+      </div>
+    </footer>
+  </section>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
