--- a/SiteDeEventos/evento6.html
+++ b/SiteDeEventos/evento6.html
@@ -36,13 +36,13 @@
             <div class="card-sl">
                 <!-- header do evento -->
                 <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                    style="background: url(https://images.even3.com.br/H_e3RUvYXvCWCLFFU4tHXLBJFjQ=/1100x440/smart/even3.blob.core.windows.net/banner/LOGOHAPPYHOUR.e6568803dde743c4a7d7.png) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">Happy Hour Empresarial
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
@@ -50,10 +50,10 @@
                                         <p><strong>Data: </strong> 16 de Junho de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> Itupeva,SP</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>19:30</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +71,14 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae autem
+                                            assumenda nisi expedita repellat nam ipsa unde, deserunt quod quis! Voluptas
+                                            dignissimos dolor assumenda corporis dolores quisquam eos modi sed. Lorem
+                                            ipsum dolor sit amet consectetur adipisicing elit. Debitis tenetur dicta a.
+                                            Officiis tenetur, velit autem nulla ex nesciunt fuga cum quisquam cumque
+                                            reiciendis voluptatum est vitae maiores mollitia debitis?
+                                        </p>
                                     </div>
                                 </div>
                             </div>
