--- a/SiteDeEventos/evento7.html
+++ b/SiteDeEventos/evento7.html
@@ -36,24 +36,24 @@
             <div class="card-sl">
                 <!-- header do evento -->
                 <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                    style="background: url(https://images.even3.com.br/XgdXdwIc2bdb8fNp9Polxsi6dq4=/1100x440/smart/even3.blob.core.windows.net/banner/Artboard2.c3937296abc04a2f9363.jpg) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">Masterclass de Recursos Humanos
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
                                     <div class="col-lg-4">
-                                        <p><strong>Data: </strong> 16 de Junho de 2023</p>
+                                        <p><strong>Data: </strong> 08 de Julho de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> São Paulo,SP</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>18:30</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +71,21 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>
+                                            Se você está em busca de capacitação para melhorar o seu desempenho no
+                                            mercado de trabalho, saiba que a nossa instituição oferece cursos com
+                                            objetivos claros e práticos. Com os formadores altamente qualificados para
+                                            transmitir conhecimento de forma clara e objetiva. Não perca a oportunidade
+                                            de se capacitar e ingresse agora mesmo em um dos nossos cursos!
+                                            
+                                        </p>
+                                        <p>
+                                            O Masterclass poderá apresentar noção de remuneração, regime jurídico do
+                                            Imposto sobre Rendimento de Trabalho (incidência, isenções, taxas,
+                                            determinação da matéria coletável, penalizações). E como fazer o
+                                            processamento de Salário incluindo diversos subsídios; conhecer as
+                                            obrigações declarativas e contabilização.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
