--- a/SiteDeEventos/evento9.html
+++ b/SiteDeEventos/evento9.html
@@ -36,24 +36,24 @@
             <div class="card-sl">
                 <!-- header do evento -->
                 <div class="imagem"
-                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
+                    style="background: url(https://images.even3.com.br/dAqiHcLLKfSb3d0wC2qdOgIFVC0=/1100x440/smart/even3.blob.core.windows.net/banner/CapturadeTela2023-06-06as18.44.53.915f1e34141d446d9c66.png) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
                         <div class="row">
                             <div class="col-lg-12 text-center">
-                                <h4 style=" font-weight: bold;font-size: 30px;">Faça seu dinheiro trabalhar para você
+                                <h4 style=" font-weight: bold;font-size: 30px;">Labgoal Flutter para Iniciantes
                                 </h4>
                                 <hr class="featurette-divider">
                                 <div class="row justify-content">
                                     <div class="col-lg-4">
-                                        <p><strong>Data: </strong> 16 de Junho de 2023</p>
+                                        <p><strong>Data: </strong> 17 de Junho de 2023</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Local: </strong> João Pessoa,PB</p>
+                                        <p><strong>Local: </strong> Poço de Caldas,MG</p>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p><strong>Hora: </strong>21:30</p>
+                                        <p><strong>Hora: </strong>20:30</p>
                                     </div>
                                 </div>
                             </div>
@@ -71,18 +71,24 @@
                                 <h4 style=" font-weight: bold;font-size: 30px;">Descrição do evento</h4>
                                 <div class="row">
                                     <div class="col-lg-12 text-start">
-                                        <p>Apresentamos a você a Conferência "Faça seu dinheiro trabalhar para você e não
-                                        você trabalhar para ele", com o palestrante Italo Morais, especialista em
-                                        finanças, mentor e consultor Financeiro.</p>
-                                        <p>Neste evento exclusivo, você terá a oportunidade de mergulhar no fascinante
-                                        mundo das finanças e descobrir estratégias práticas para alcançar o sucesso
-                                        financeiro.</p>
-                                        <p>Descubra como fazer o seu dinheiro trabalhar a seu favor, explorando tópicos
-                                        como gerenciamento de finanças pessoais, investimentos inteligentes,
-                                        empreendedorismo lucrativo e o poder de uma mentalidade financeira sólida.
-                                        Não perca a chance de participar desta conferência exclusiva e reservar seu
-                                        lugar agora mesmo. Aproveite essa oportunidade única e dar os primeiros passos
-                                        rumo ao sucesso financeiro.</p>
+                                        <p>
+                                            É com grande satisfação que abrimos as inscrições para o Curso Labgoal de
+                                            Flutter, uma oportunidade incrível para você conhecer melhor esse framework.
+                                        </p>
+                                        <p>
+                                            Nosso curso terá duração de 4 horas direto!
+                                        </p>
+                                        <p>
+                                            Para garantir que você inicie o dia com energia e disposição para aprender,
+                                            nós iniciaremos às 08 horas com um café da manhã caprichado e às 09h
+                                            iniciaremos nosso Labgoal até a 13h.
+                                        </p>
+                                        <p>
+                                            Teremos máquinas disponíveis para uso em pares, mas caso prefira, você pode
+                                            trazer seu próprio computador, porém recomendamos que verifique as
+                                            configurações necessárias e tenha todas as ferramentas instaladas
+                                            previamente.
+                                        </p>
                                     </div>
                                 </div>
                             </div>
