--- a/SiteDeEventos/index.html
+++ b/SiteDeEventos/index.html
@@ -61,7 +61,7 @@
                 TI), que busca incentivar a inclusão de meninas do ensino médio e a permanência de mulheres da graduação
                 na área de Tecnologia da Informação.
               </p>
-              <button class="btn btn-lg btn-warning" href="evento1.html">Ver evento</button>
+              <a class="btn btn-lg btn-warning" href="evento4.html">Ver evento</a>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
               <p>O Evento de Integração e Inovação (EII) é um movimento realizado por estudantes e que busca trazer,
                 para o ambiente universitário, temáticas interdisciplinares ligadas à inovação.
               </p>
-              <button class="btn btn-lg btn-warning" href="evento2">Ver evento</button>
+              <a class="btn btn-lg btn-warning" href="evento5.html">Ver evento</a>
             </div>
           </div>
         </div>
@@ -91,61 +91,55 @@
 
   <section>
     <div class="container">
-      <h3 style="font-weight: bold;">AQUI ESTÃO ALGUNS EVENTOS PRÓXIMOS :</h3><button type="button"
-        class="btn btn-warning"> Veja mais
-        aqui!</button>
+      <h3 style="font-weight: bold;">AQUI ESTÃO ALGUNS EVENTOS PRÓXIMOS :</h3><a type="button"
+        class="btn btn-warning" href="eventos.html"> Veja mais
+        aqui!</a>
       <br>
       <br>
       <div class="row justify-content-space-evenly">
         <!-- Card1 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image" style="background: url(img/ImgEventos/Evento01.webp) center/cover;">
+            <div class="card-image" style="background: url(img/Evento01.webp) center/cover;">
             </div>
             <div class="card-heading">
-              EVENTO 1
+              Faça seu dinheiro trabalhar para você
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> João Pessoa,PB</p>
+                <p href="" class="card-text"><strong>Data:</strong> 19/08/2023</p>
+              </div>
             <a href="evento1.html" class="card-button"> Ver Evento</a>
           </div>
         </div>
         <!-- Card2 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image" style="background: url(img/ImgEventos/Evento02.webp) center/cover;">
+            <div class="card-image" style="background: url(img/Evento02.webp) center/cover;">
             </div>
             <div class="card-heading">
-              EVENTO 2
+              PROFISSIONAL 5.0
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
+            <div class="dataLocal">
+              <p href="" class="card-text"><strong>Local:</strong> Limeira,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 30/08/2023</p>
             </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-            <a href="#" class="card-button"> Ver Evento</a>
+            <a href="evento2.html" class="card-button"> Ver Evento</a>
           </div>
         </div>
         <!-- Card3 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image" style=" background: url(img/ImgEventos/evento03.webp) center/cover;">
+            <div class="card-image" style=" background: url(img/evento03.webp) center/cover;">
             </div>
             <div class="card-heading">
-              EVENTO 3
+              EXPO EMPREENDEDOR
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
+            <div class="dataLocal">
+              <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 11/08/2023 - 12/08/2023</p>
             </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-            <a href="#" class="card-button"> Ver Evento</a>
+            <a href="evento3.html" class="card-button"> Ver Evento</a>
           </div>
         </div>
       </div>
@@ -159,7 +153,7 @@
           <div class="my-md-5 py-5">
             <h1 style="font-weight: bold; font-family: sans-serif;">NÃO PERCA ESSA OPORTUNIDADE</h1>
             <br>
-            <button type="button" class="btn btn-outline-warning" style="width: 200px;">Crie sua conta</button>
+            <a role="button" class="btn btn-outline-warning" style="width: 200px;" href="cadastro.html">Crie sua conta</a>
           </div>
         </div>
       </div>
