--- a/SiteDeEventos/login.html
+++ b/SiteDeEventos/login.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-dark">
   <section class="vh-100 text-bg-dark">
     <div class="container-fluid">
       <div class="row justify-content-center align-items-center">
         <div class="col-sm-6 text-white">
           <!-- Logo -->
-          <div class="px-5 ms-xl-4">
+          <div class="px-5 ms-xl-4" style="display: flex; justify-content: center;">
             <img src="img/aiaiai.png" alt="">
           </div>
 
           <!-- Form -->
-          <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+          <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5 justify-content-center">
 
             <form style="width: 23rem;">
               <h1 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Acesse sua conta</h1>
@@ -52,8 +52,8 @@
         </div>
         <!-- Background -->
         <div class="col-sm-6 px-0 d-none d-sm-block">
-          <img src="img/wallpaper2you_280154.jpg" alt="Login image"
-            class="w-100 vh-100" style="object-fit: cover; object-position: left;">
+          <img src="img/wave_background.jpg" alt="Login image"
+           class="w-100 h-100"style="object-fit: cover; object-position: left;">
         </div>
       </div>
     </div>
